# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  14 May 2006; Roy Marples <uberlord@gentoo.org>:

    Don't stop coldplugged services when changing runlevels, #113264.

  07 May 2006; Roy Marples <uberlord@gentoo.org>:

    Fix logic in br2684ctl.sh as reported by Alin Nastac, #132549.

  05 May 2006; Mike Frysinger <vapier@gentoo.org>:

    Fix typo s/veend/vewend/ in functions.sh as reported by Yoshino #132262.

  05 May 2006; Roy Marples <uberlord@gentoo.org>:

    If a device initiated service is in the default runlevel then we no
    longer start it in the boot runlevel.

  04 May 2006; Roy Marples <uberlord@gentoo.org>:

    RC_COLDPLUG is now just a yes|no setting and the service list allowed
    is now in RC_PLUG_SERVICES.
    Added RC_HOTPLUG setting similar to RC_COLDPLUG.

* baselayout-1.12.0_pre19 (02 May 2006)

  01 May 2006; Roy Marples <uberlord@gentoo.org>:

    /proc/net/wireless may not have whitespace after $iface:
    wpa_supplicant no longer requires ctrl_interface set.
    Thanks to kelmo for those ideas.

  28 Apr 2006; Mike Frysinger <vapier@gentoo.org>:

    Tweak is_older_than than so it skips checking the timestamps on directories,
    just the files in the directory.

    Rewrite modules-update to make it readable and usuable without old modutils.

  24 Apr 2006; Roy Marples <uberlord@gentoo.org>:

    revert the -k2 addition to sort in halt.sh as we only echo the second
    key to sort, #131001.

* baselayout-1.12.0_pre18 (22 Apr 2006)

  22 Apr 2006; Mike Frysinger <vapier@gentoo.org>:

    Touchup fuser arguments in halt.sh so we dont have to pipe to /dev/null.

  22 Apr 2006; Roy Marples <uberlord@gentoo.org>:

    udhcpc module now requires udhcp-0.9.9_pre20041216-r3 or newer with
    the --env command option.

  21 Apr 2006; Roy Marples <uberlord@gentoo.org>:

    br2684 module should now work correctly.
    Document usage of br2684 module.
